--- a/OpenKJ/bmdbdialog.ui
+++ b/OpenKJ/bmdbdialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Break Music DB Management</string>
+   <string>Mistari DB Management</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
