--- a/OpenKJ/mainwindow.ui
+++ b/OpenKJ/mainwindow.ui
@@ -22,11 +22,11 @@
    </font>
   </property>
   <property name="windowTitle">
-   <string>OpenKJ</string>
+   <string>CLOUDnine</string>
   </property>
   <property name="windowIcon">
    <iconset resource="resources.qrc">
-    <normaloff>:/icons/Icons/okicon.svg</normaloff>:/icons/Icons/okicon.svg</iconset>
+    <normaloff>:/icons/Icons/okjicon144x144.png</normaloff>:/icons/Icons/okjicon144x144.png</iconset>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QHBoxLayout" name="horizontalLayout_23">
@@ -832,6 +832,15 @@ QPushButton:default {
                      </color>
                     </brush>
                    </colorrole>
+                   <colorrole role="PlaceholderText">
+                    <brush brushstyle="NoBrush">
+                     <color alpha="128">
+                      <red>0</red>
+                      <green>0</green>
+                      <blue>0</blue>
+                     </color>
+                    </brush>
+                   </colorrole>
                   </active>
                   <inactive>
                    <colorrole role="WindowText">
@@ -1005,6 +1014,15 @@ QPushButton:default {
                      </color>
                     </brush>
                    </colorrole>
+                   <colorrole role="PlaceholderText">
+                    <brush brushstyle="NoBrush">
+                     <color alpha="128">
+                      <red>0</red>
+                      <green>0</green>
+                      <blue>0</blue>
+                     </color>
+                    </brush>
+                   </colorrole>
                   </inactive>
                   <disabled>
                    <colorrole role="WindowText">
@@ -1172,6 +1190,15 @@ QPushButton:default {
                    <colorrole role="ToolTipText">
                     <brush brushstyle="SolidPattern">
                      <color alpha="255">
+                      <red>0</red>
+                      <green>0</green>
+                      <blue>0</blue>
+                     </color>
+                    </brush>
+                   </colorrole>
+                   <colorrole role="PlaceholderText">
+                    <brush brushstyle="NoBrush">
+                     <color alpha="128">
                       <red>0</red>
                       <green>0</green>
                       <blue>0</blue>
@@ -1860,8 +1887,8 @@ QPushButton:default {
                   <rect>
                    <x>0</x>
                    <y>0</y>
-                   <width>492</width>
-                   <height>178</height>
+                   <width>500</width>
+                   <height>220</height>
                   </rect>
                  </property>
                  <layout class="QVBoxLayout" name="verticalLayout_2" stretch="1,0,1">
@@ -1971,7 +1998,7 @@ QPushButton:default {
       </widget>
       <widget class="QWidget" name="tab_2">
        <attribute name="title">
-        <string>Break Music</string>
+        <string>Mistari</string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout_9">
         <item>
@@ -2800,7 +2827,7 @@ QPushButton:default {
      <x>0</x>
      <y>0</y>
      <width>1309</width>
-     <height>24</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -2834,7 +2861,7 @@ QPushButton:default {
    </widget>
    <widget class="QMenu" name="menuBreak_Music">
     <property name="title">
-     <string>Break Music</string>
+     <string>Mistari</string>
     </property>
     <widget class="QMenu" name="menuPlaylists">
      <property name="title">
@@ -2905,7 +2932,7 @@ QPushButton:default {
   </action>
   <action name="actionManage_Break_DB">
    <property name="text">
-    <string>Manage Break DB</string>
+    <string>Manage Mistari DB</string>
    </property>
   </action>
   <action name="actionManage_Karaoke_DB">
