--- a/OpenKJ/resources.qrc
+++ b/OpenKJ/resources.qrc
@@ -31,6 +31,7 @@
         <file>Icons/okicon.svg</file>
         <file>Icons/theme.png</file>
         <file>Icons/rotation.png</file>
+        <file>Icons/cloudnine.ico</file>
     </qresource>
     <qresource prefix="/">
         <file>Icons/other-settings.png</file>
